# laundry-control

./: .gitignore  .sconsign.dblite  README.md  SConstruct  build_elm.sh  package-lock.json  package.json
assets/translations/: strings.csv
src-elm/: elm.json  index.html
src-elm/src/: Context.elm  Intl.elm  Ports.elm
src-elm/src/AppData/: IpAddress.elm  Parameter.elm  Things5.elm  WashingMachineConfiguration.elm  WashingMachineState.elm
src-elm/src/AppWidgets/: AppWidgets.elm  Style.elm
src-elm/src/Pages/: PageDryingMachine.elm  PageSelection.elm  PageWashingMachine.elm
src-elm/src/Pages/Machine/: Page.elm
src-elm/src/Pages/Machine/Tabs/: LocalDevicesList.elm  MachineConfiguration.elm  RemoteControl.elm  RemoteDevicesList.elm  WashingCycle.elm
src-elm/src/Pages/WashingMachineTabs/: MachineConfiguration.elm  RemoteControl.elm  WashCycles.elm  WashingCycle.elm
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: controller.rs  main.rs
src-tauri/src/controller/: backend.rs  discovery.rs  mod.rs  prefs.rs  things5.rs  things5_api.rs
src-tauri/src/controller/washing_machine/: http.rs  local.rs  mod.rs  things5.rs
tools/: csv2elm.py
