[package]
name = "app"
version = "0.1.4"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
preferences = "^1.1.0"
tokio = {version="1.16", features = ["rt", "net", "time", "macros"] }
socket2 = "0.4.4"
futures = "0.3.21"
log = "0.4.16"
simplelog = "^0.10.0"
urlencoding = "2.1.0"
reqwest = {version ="0.11.10", features = ["json", "blocking"] }
chrono = "0.4.19"
base64 = "0.13.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
